# LiveRecon3D-player

./: .gitignore  CMakeLists.txt
include/: PointCloud.h  config.h  opengl_mesh.h  typedef.h
include/Opengl_Render/: Opengl_Render.h  fragShader.frag  fragShader_bg.frag  opengl_mesh.h  shader.h  vertexShader.vert  vertexShader_bg.vert
src/: PointCloud.cpp  main.cpp
src/Opengl_Render/: Opengl_Render.cpp  opengl_mesh.cpp
